--- a/index1.html
+++ b/index1.html
@@ -94,27 +94,27 @@
     <div class="">
       <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 masonry">
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/Map1.pdf" alt="" />
+          <figure class="effect-sarah"> <img src="images/gallery/Map1.jpg" alt="" />
             <figcaption>
               <h2>Annual Percipitation. <span></span></h2>
               <p>This map shows the baseline mean annual percipitation for 1986 - 2005 for the world.</p>
-              <a href="images/gallery/Map1.pdf">View more</a> </figcaption>
+              <a href="images/gallery/Map1.jpg">View more</a> </figcaption>
           </figure>
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/Map2.pdf" alt="" />
+          <figure class="effect-sarah"> <img src="images/gallery/Map2.jpg" alt="" />
             <figcaption>
               <h2> Annual Percipitation using RCP 8.5<span></span></h2>
               <p>This map shows the calculated mean annual percipitation for the world using Representative Concentration Pathway (RCP) of 8.5 for the world. RCP is a greenhouse gas concentration (not emission) trajectory adopted by IPCC</p>
-              <a href="images/gallery/Map2.pdf">View more</a> </figcaption>
+              <a href="images/gallery/Map2.jpg">View more</a> </figcaption>
           </figure>
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/Map3.pdf" alt="" />
+          <figure class="effect-sarah"> <img src="images/gallery/Map3.jpg" alt="" />
             <figcaption>
               <h2> <span> Mean Annual Percipitation for 2039 with RCP 8.5 </span></h2>
               <p class="description">This map shows the mean annual percipitation for the year 2039 for the world. </p>
-              <a href="images/gallery/Map3.pdf">View more</a> </figcaption>
+              <a href="images/gallery/Map3.jpg">View more</a> </figcaption>
           </figure>
         </li>
         <li class="masonry-item grid">
@@ -126,19 +126,19 @@
           </figure>
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/Map4.pdf" alt="" />
+          <figure class="effect-sarah"> <img src="images/gallery/Map4.jpg" alt="" />
             <figcaption>
               <h2> <span>Service area of warehouses and FDP sites in Ethiopia</span></h2>
               <p class="description">This map shows the various warehouses in Ethiopia which provide food and shelter to the local community. Service areas of 20 km each has been made and we can also see the Food Distribution Point. These point provide food further to the community. </p>
-              <a href="images/gallery/Map4.pdf">View more</a> </figcaption>
+              <a href="images/gallery/Map4.jpg">View more</a> </figcaption>
           </figure>
         </li>
         <li class="masonry-item grid">
-          <figure class="effect-sarah" > <img src="images/gallery/Map5.pdf" alt="" />
+          <figure class="effect-sarah" > <img src="images/gallery/Map5.jpg" alt="" />
             <figcaption>
               <h2><span> Weighted Analysis</span></h2>
               <p class="description">This map represents two maps: 1. Average risk per zone of Malaria Incidence in Ethiopia. 2. Weighted vulnerability scores for different factors affecting the malaria incidences.</p>
-              <a href="images/gallery/Map5.pdf">View more</a> </figcaption>
+              <a href="images/gallery/Map5.jpg">View more</a> </figcaption>
           </figure>
         </li>
       </ul>
